@@ -112,10 +112,10 @@ for i = 1 : length( Q.ABS_SPECIES )
     ATM.VMR(i,:,1,1) = G.DATA;
 
    case 'MIPAS'
-
-    load( fullfile( Q.FOLDER_MIPAS ,sprintf('apriori_%s.mat',species)) );
-    co_vmr_mipas = load_co_vmr_mipas(MIPAS, mjd, lat) / 1e6; %ppm -> 1 units
-    ATM.VMR(i,:,1,1) = interp1( MIPAS.GRID1, co_vmr_mipas, ATM.Z, 'linear', 'extrap' );
+     %
+     load( fullfile( Q.FOLDER_MIPAS ,sprintf('apriori_%s.mat',species)) );
+     co_vmr_mipas = load_co_vmr_mipas(MIPAS, mjd, lat) / 1e6; %ppm -> 1 units
+     ATM.VMR(i,:,1,1) = interp1( MIPAS.GRID1, co_vmr_mipas, ATM.Z, 'linear', 'extrap' );
 
    otherwise
     error( '%s is an unknown option for Q.ABS_SPECIES.SOURCE.', ...
