@@ -1,3 +1,8 @@
+2018-12-10  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* Mscripts_atmlab/load_co_vmr_mipas.m (co_vmr_mipas): Added
+	missing ;
+
 2018-10-03  Patrick Eriksson  <patrick.eriksson@chalmers.se>
 
 	* Build_scripts/runscript.m (runscript): Some revision. Now no
